fix notification bug : outofbounds